docs/versioned_docs/version-0.8.0/api/mellea/stdlib/components/intrinsic/intrinsic.mdx
---
title: "mellea.stdlib.components.intrinsic.intrinsic"
sidebar_label: "mellea.stdlib.components.intrinsic.intrinsic"
description: "`Intrinsic` component for invoking fine-tuned adapter capabilities."
---

`Intrinsic` component for invoking fine-tuned adapter capabilities.





An `Intrinsic` component references a named adapter from Mellea's intrinsic catalog
and transforms a chat completion request — typically by injecting new messages,
modifying model parameters, or applying structured output constraints. It must be
paired with a backend that supports adapter loading (e.g. `LocalHFBackend` with a
composed `Adapter` — see `mellea.backends.adapters` — attached via `add_adapter`).


## Classes

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `Intrinsic` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/components/intrinsic/intrinsic.py#L18" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-intrinsic}


A component representing an intrinsic fine-tuned adapter capability.

Intrinsics transform a chat completion request by injecting messages,
modifying model parameters, or applying structured output constraints.
Must be paired with a backend that supports adapter loading.

**Args:**
- `intrinsic_name`: The user-visible name of the intrinsic. For a
name outside Mellea's intrinsics catalog (a custom, non-catalog
adapter function), `adapter_types` must be provided explicitly —
this is what lets a custom `Intrinsic` construct without a
catalog entry, replacing the deprecated `CustomIntrinsicAdapter`
shim's catalog monkey-patch (Epic #929, issue #1144).
- `intrinsic_kwargs`: Optional keyword arguments required by
the intrinsic at invocation time.
- `adapter_types`: Adapter types this
intrinsic supports. Required for a name outside the catalog;
optional (defaults to the catalog entry's own types) otherwise.

**Attributes:**
- `metadata`: The intrinsic metadata fetched from the catalog, or a
synthetic entry for a name outside it (see `adapter_types` above).
For that synthetic entry, `metadata.repo_id` is `""` and
`metadata.revision` is `"not-a-catalog-entry"` — this class never
reads either field itself, but code that does (e.g. after
reaching in via `intrinsic.metadata.repo_id`) should treat an
empty `repo_id` as "no catalog entry", not as a real value.
- `intrinsic_kwargs`: Keyword arguments passed to the intrinsic.
- `intrinsic_name`: User-visible name of this intrinsic (property).
- `adapter_types`: Available adapter types that
implement this intrinsic (property). Defaults to values in self.metadata.

**Raises:**
- `ValueError`: `intrinsic_name` is not in the catalog and `adapter_types`
was not provided — there is no way to know which adapter
realities to look up without either.



<div className="h-8" />
**Methods:**

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `intrinsic_name` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/components/intrinsic/intrinsic.py#L91" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#intrinsic_name}

```python
intrinsic_name(self)
```

User-visible name of this intrinsic.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `adapter_types` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/components/intrinsic/intrinsic.py#L96" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#adapter_types}

```python
adapter_types(self) -> tuple[AdapterType, ...]
```

Tuple of available adapter types that implement this intrinsic.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `parts` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/components/intrinsic/intrinsic.py#L104" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#parts}

```python
parts(self) -> list[Span]
```

Return the constituent parts of this intrinsic component.

Will need to be implemented by subclasses since not all intrinsics
produce text or message output.

**Returns:**
- list\[Span]: Always an empty list for the base class.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `format_for_llm` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/components/intrinsic/intrinsic.py#L115" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#format_for_llm}

```python
format_for_llm(self) -> TemplateRepresentation | str
```

Not implemented for the base `Intrinsic` class.

`Intrinsic` components are intended to be used as the *action* passed
directly to the backend, not as a part of the context rendered by the
formatter.

**Returns:**
- TemplateRepresentation | str: Never returns; always raises.

**Raises:**
- `NotImplementedError`: Always, because `Intrinsic` does not
implement `format_for_llm` by default.

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />
